--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="tutoriales.html">Tutoriales</a>
             <a href="cursos.html">Cursos</a>
             <a href="contacto.html">Contacto</a>
+            <a href="horari.html">Horario</a>
         </nav>
     </div>
     <section>
