--- a/horari.html
+++ b/horari.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horari</title>
-    <a href="index.html">Home</a>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <a href="index.html">Home</a>
 </head>
 <body>
     <h1>Horari de Classe</h1>
