--- a/horari.html
+++ b/horari.html
@@ -6,7 +6,7 @@
     <title>Horari</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <a href="index.html">Home</a>
+    <a href="index.html" class="home">Home</a>
 </head>
 <body>
     <h1>Horari de Classe</h1>
