--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="cursos.html">Cursos</a>
             <a href="contacto.html">Contacto</a>
             <a href="horari.html">Horario</a>
+            <a href="cv.html">Curriculum</a>
         </nav>
     </div>
     <section>
