--- a/basic.html
+++ b/basic.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Developer Portfolio</title>
-    <a href="index.html">Home</a>
     
 
 </head>
+<header>
+    <div class="bg-secundario">
+        <nav class="navegación-principal contenedor">
+            <a href="index.html">Home</a>
+            <a href="tutoriales.html">Tutoriales</a>
+            <a href="cursos.html">Cursos</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="horari.html">Horario</a>
+            <a href="cv.html">Curriculum</a>
+        </nav>
+</header>
 <body>
 
 <header>
