--- a/horari.html
+++ b/horari.html
@@ -6,8 +6,18 @@
     <title>Horari</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <a href="index.html" class="home">Home</a>
 </head>
+<header>
+    <div class="bg-secundario">
+        <nav class="navegación-principal contenedor">
+            <a href="index.html">Home</a>
+            <a href="tutoriales.html">Tutoriales</a>
+            <a href="cursos.html">Cursos</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="horari.html">Horario</a>
+            <a href="cv.html">Curriculum</a>
+        </nav>
+</header>
 <body>
     <h1>Horari de Classe</h1>
     <table border="1">
