--- a/cv.html
+++ b/cv.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículum - Junior Frontend Developer</title>
     <link rel="stylesheet" href="css/styles.css">
-    <a href="index.html">Home</a>
 </head>
+<header>
+    <div class="bg-secundario">
+        <div class="bg-secundario">
+            <nav class="navegación-principal contenedor">
+                <a href="index.html">Home</a>
+                <a href="tutoriales.html">Tutoriales</a>
+                <a href="cursos.html">Cursos</a>
+                <a href="contacto.html">Contacto</a>
+                <a href="horari.html">Horario</a>
+                <a href="cv.html">Curriculum</a>
+            </nav>
+</header>
 <body>
     <div class="container">
         <h1>Marc Devis Arbona</h1>
