--- a/tutoriales.html
+++ b/tutoriales.html
@@ -12,11 +12,14 @@
 
         <h1>Tutoriales</h1>
     </header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="tutoriales.html">Home</a>
-        <a href="cursos.html">Cursos</a>
-        <a href="contacto.html">Contacto</a>
-    </nav>
+    <div class="bg-secundario">
+        <nav class="navegación-principal contenedor">
+            <a href="index.html">Home</a>
+            <a href="tutoriales.html">Tutoriales</a>
+            <a href="cursos.html">Cursos</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="horari.html">Horario</a>
+            <a href="cv.html">Curriculum</a>
+        </nav>
 </body>
 </html>
