--- a/cursos.html
+++ b/cursos.html
@@ -10,7 +10,7 @@
 <body>
     <header>
 
-        <h1>Tutoriales</h1>
+        <h1>Cursos</h1>
     </header>
     <div class="bg-secundario">
         <nav class="navegación-principal contenedor">
