--- a/flexbox.html
+++ b/flexbox.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Exemple de FontAwesome</title>
     <link rel="stylesheet" href="css/stylesflebox.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
     <div class="tab-container-1">
