--- a/landigpage.html
+++ b/landigpage.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="cat">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link rel="icon" href="flying_rocket_icon_182907.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="css/landing.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <title>REAL MADRID</title>
 </head>
 <body>
-
     <header id="showcase">
-        <h1>Bienvenido al REY DE EUROPA</h1>
-        <p>El Real Madrid triplica el palmarés del F.C.Barcelona</p>
-        <a href="https://www.youtube.com/watch?v=lIMokbMWz9o" target="_blank">ESCUCHA EL HIMNO 👂🏻</a>
-        <a href="https://www.realmadrid.com/es-ES/el-club/palmares/futbol" target="_blank">PALMARES</a>
+        <h1>BIENVENIDO AL REY DE EUROPA</h1>
+        <p>MIL VECES MEJOR QUE TODO EL MUNDO</p>
+        <a href="https://www.realmadrid.com/es-ES/el-club/palmares/futbol" target="_blank">PALMARES🏆</a>
+        <a href="https://www.youtube.com/watch?v=lIMokbMWz9o" target="_blank">HIMNO👂🏻</a>
     </header>
-
-    <section id="section-a">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, accusamus incidunt. Magni commodi beatae doloremque. Illo omnis illum distinctio, exercitationem consequatur pariatur dolorum, rem quisquam nostrum, quibusdam saepe quod ut!</p>
+    <section class="fonsVermell" id="section-a">
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo laudantium dolores sunt maiores omnis quo officia quas, distinctio iste optio voluptas, libero voluptatibus doloribus minima quibusdam adipisci. Sed, quam tempore?
+                Alias quisquam modi tempore sequi accusantium recusandae culpa excepturi doloribus aliquam fuga qui nobis consequatur, vero, numquam eum praesentium voluptate provident minus molestiae error? Vitae inventore porro maiores atque hic.
+                Et illum alias dolores nobis quam veritatis commodi nisi tempora. Odio, atque sunt iste voluptatibus voluptatum laborum facilis laboriosam eius recusandae, aspernatur ullam fugit eligendi dolorem quis amet, vero illum.
+            </p>
+        </div>
     </section>
-
     <section id="section-b">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores provident numquam, illum culpa possimus laborum magni suscipit reiciendis rem quasi, hic exercitationem accusantium officiis. Unde ab fugit saepe repellat cum!</p>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus veniam nam voluptatibus architecto unde nostrum ab ut, ex omnis iusto! Tempora iusto, fugiat tenetur alias ex eos nobis dolorem incidunt.
+                Eos impedit, vel voluptates in atque cupiditate voluptatum odio. Quaerat commodi perferendis adipisci tempore cupiditate hic, cum magni sint placeat pariatur libero enim iusto excepturi quidem nemo esse eius. Fugit!
+                Exercitationem at eligendi veniam quasi consequuntur ea unde provident tempore iure repellendus voluptatem totam et blanditiis eum error, hic voluptas architecto. Dolor, hic maxime accusamus illo tenetur consectetur quae omnis.
+            </p>
+        </div>
     </section>
-
-    <section class="section-c">
-        <div class="box fonsDorat">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sint, consectetur eius nesciunt perferendis obcaecati ratione molestias esse iste accusantium dolore, dignissimos at excepturi porro! Culpa quaerat ex enim quae.</p>
+    <section id="section-c">
+        <div class="box fonsVermell">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio cumque quis aliquam rerum laborum veritatis magnam cum quibusdam labore quas exercitationem consectetur reiciendis nisi, sint tempora fugit, aliquid libero dolor!</p>
         </div>
         <div class="box-c">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sint, consectetur eius nesciunt perferendis obcaecati ratione molestias esse iste accusantium dolore, dignissimos at excepturi porro! Culpa quaerat ex enim quae.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat vero sint vitae corrupti, laborum omnis quasi mollitia debitis dolore, inventore deleniti dolorum quidem architecto quo tempora nam rem ea pariatur!</p>
         </div>
-        <div class="box fonsDorat">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sint, consectetur eius nesciunt perferendis obcaecati ratione molestias esse iste accusantium dolore, dignissimos at excepturi porro! Culpa quaerat ex enim quae.</p>
+        <div class="box fonsVermell">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos impedit magni nesciunt quas sunt blanditiis ut deserunt, velit voluptatibus ad voluptatum ea id officia aliquam obcaecati, assumenda odit laudantium consectetur?</p>
         </div>
     </section>
-
-
 </body>
 </html>
